refactor: rename files and add new documentation for fluid properties